# inf3995

./: README.md  hello.cc  server  server.cpp
Application_Android/: bixi3995-keystore.jks  bixiApplication.jks  inf3995-keystore.jks  settings.gradle
Application_Android/app/: build.gradle
Application_Android/release/: output-metadata.json
Application_PC/BixiAdminTool/: App.qml  Engine1Page.qml  Engine2Page.qml  Engine3Page.qml  LoginPage.qml  MyComponent.qml  Page1.qml  Page3.qml  Settings.qml  SurveyList.qml  backend.cpp  backend.h  engine.cpp  engine.h  main.cpp  main.qml  qml.qrc  swipe.pro  (+2 more)
CentralServer/: .gitignore  Dockerfile  docker-compose.yml  mysql  mysql.cpp  mysql.h  mysql.hpp  run.sh  server  server.cpp  server.hpp  test.py  traefik.toml
DataEngine/: Dockerfile  engine2.py  engine2_HTTP.py  lab.py
Test_Android/: settings.gradle
backend/: docker-compose.yml  dynamic.yaml
backend/Docker/CentralServer/: .gitignore  CMakeLists.txt  Dockerfile  HTTPRequest.hpp  Makefile  WSMeta.cpp  WSMeta.hpp  customUtilities.hpp  main.cpp  meta.cpp  meta.hpp  mysql.cpp  mysql.hpp  server.cpp  server.hpp  sha512.cpp  sha512.h  step6.cpp  websocket.cpp  websocket.hpp
engin3AI/: Dockerfile  engin1.py  small_tree.dot  weatherPred.py
enginsDonnees/: .gitignore  .~lock.after1.csv#  .~lock.out2.csv#  Dockerfile  engin1.py  engin2.py  enginHTTP.py  enginSQL.py  lab.py  mySql.py
pistache/: common.h  endpoint.h  http.h  http_headers.h  listener.h  log.h  net.h  reactor.h  router.h  ssl_wrappers.h  stream.h  string_logger.h  string_view.h  transport.h  version.h.in
(+313 files in other folders)
